--- a/app/webroot/css/styles.css
+++ b/app/webroot/css/styles.css
@@ -1,36 +1,48 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 html, body {
+	font-family: 'Roboto Slab', Helvetica, sans-serif;
 	height: 100%;
 }
 
 body {
 	border: 0 none;
-	margin: 0;
-	padding: 0;
 }
 
-#container, #content {
+#container,
+#content {
 	min-width: 1400px;
 	height: 100%;
 }
 
+#content {
+	background: url('../img/dot_bg.jpg') top left repeat;
+}
+
 #content-inner {
 	height: 100%;
-	padding: 0 380px 0 280px;
+	margin: 0 480px 0 380px;
 }
 
 .sidebar {
-	background-color: #DDDDDD;
+	background-color: #EEEEEE;
 	box-shadow: 0 3px 7px 1px rgba(0, 0, 0, 0.55);
-	height: 100%;
+	height: 800px;
 	padding: 15px;
+	position: absolute;
 }
 
 #leftbar {
-	float: left;
+	left: 100px;
+	top: 50px;
 	width: 250px;
 }
 
 #rightbar {
-	float: right;
+	right: 100px;
+	top: 50px;
 	width: 350px;
 }
